Bug 134977 - FILEOPEN XLSX Series level chart data label font size not imported correctly
Summary: FILEOPEN XLSX Series level chart data label font size not imported correctly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.1.0
Keywords: implementationError
: 131188 (view as bug list)
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-07-20 11:38 UTC by NISZ LibreOffice Team
Modified: 2020-09-18 08:59 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel with pie charts, custom labels are set to 8 pt and 20 pt (16.74 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-07-20 11:38 UTC, NISZ LibreOffice Team
Details
Example file from Excel with column and line charts, custom labels are set to 8 pt and 20 pt (17.36 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-07-20 11:39 UTC, NISZ LibreOffice Team
Details
Screenshot of the original pie chart document side by side in Excel and Calc (75.17 KB, image/png)
2020-07-20 11:39 UTC, NISZ LibreOffice Team
Details
Screenshot of the original column+line chart document side by side in Excel and Calc (102.06 KB, image/png)
2020-07-20 11:39 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-07-20 11:38:40 UTC
Created attachment 163306 [details]
Example file from Excel with pie charts, custom labels are set to 8 pt and 20 pt

Attached documents have charts with custom data labels set with text only. There is custom font size set for the whole data series, which seems to be imported correctly, but it is not applied in the chart display.


Steps to reproduce:
1.	In Excel create a simple chart and enable data labels
2.	Enter custom data label text on the labels
3.	Select the data series on the chart and set a custom font size on the Home – Font ribbon for the whole data series
4.	Save the file and open it in Calc

Actual results:
When opened in Calc the font size appears to be about 14 pt size, regardless the set value. Attached files used 8 pt and 20 pt sizes. The Data Labels -> Font tab interestingly reflects these values correctly, unlike the chart rendering.

Expected results:
Font sizes applied for the custom labels of the data series.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: a3e52f63c92876b4a3ac6df61e05b1d3510ba9c9
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: GL; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

Also happens in:
Version: 6.1.0.3
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: en-US (hu_HU); Calc: CL

Before this the custom labels were not even imported.

Additional Information: 

Bibisected using bibisect-win32-6.1 to: 
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=790f9abeb1a1167ad5ab84c5fb855b36669c125b
author	Szymon Kłos <szymon.klos@collabora.com>	2018-01-04 22:15:32 +0100
committer	Szymon Kłos <szymon.klos@collabora.com>	2018-01-29 23:49:42 +0100

tdf#114821 import complex data labels in bar chart
Comment 1 NISZ LibreOffice Team 2020-07-20 11:39:09 UTC
Created attachment 163307 [details]
Example file from Excel with column and line charts, custom labels are set to 8 pt and 20 pt
Comment 2 NISZ LibreOffice Team 2020-07-20 11:39:25 UTC
Created attachment 163308 [details]
Screenshot of the original pie chart document side by side in Excel and Calc
Comment 3 NISZ LibreOffice Team 2020-07-20 11:39:40 UTC
Created attachment 163309 [details]
Screenshot of the original column+line chart document side by side in Excel and Calc
Comment 4 NISZ LibreOffice Team 2020-07-20 11:40:38 UTC
This is one of the reasons behind bug #121281
Comment 5 Xisco Faulí 2020-07-20 13:34:36 UTC
Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: abea0d6647c7f1f7e76c73c26cb80e6a67dc5111
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 6 Commit Notification 2020-08-07 09:55:21 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bcda268cde1f8408c2066ce985acedfce3e3bc2e

tdf#134977 Chart OOXML: fix import of custom data label

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Tünde Tóth 2020-08-07 10:00:10 UTC
*** Bug 131188 has been marked as a duplicate of this bug. ***
Comment 8 NISZ LibreOffice Team 2020-09-14 09:50:44 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded