tdf#134977 Chart OOXML: fix import of custom data label

Use the data series properties for the default properties
of the custom data labels.

Change-Id: I651fa030276dfdec13b5801c0188bfd07c498b49